--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "firebase": "^9.9.3",
     "quasar": "^2.0.0",
